fixed z-index

--- a/hstyle.css
+++ b/hstyle.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     min-height: 110%;
     height: auto;
-    z-index: 20;
+    z-index: 200;
     background-color: #11101a;
     display: flex;
     justify-content: center;
@@ -276,6 +276,7 @@ nav {
     position: fixed;
     margin-top: -1px;
     margin-bottom: 40px;
+    z-index: 20;
 
     width: 100vw;
     border: 1px solid red transparent;
